# ViDi

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_codelite.sh  rebuild.sh  vidi_autobuild.sh
disasm/: CMakeLists.txt  CodeBlock.cpp  CodeBlock.h  Context.cpp  Context.h  DisasmBase.cpp  DisasmBase.h  DisasmChunk.cpp  DisasmChunk.h  DisasmChunkBuf.cpp  DisasmChunkBuf.h  ExeDisasm.h  FuncNameManager.cpp  FuncNameManager.h  MnemType.h  Tracer.cpp  Tracer.h  Util.h
disasm/cdis/: CDisasm.cpp  CDisasm.h  CapstoneChunk.cpp  CapstoneChunk.h  ExeDisasm.h
disasm/dos/: DosDisasm.cpp  DosDisasm.h  DosTracer.cpp  DosTracer.h
disasm/include/: AddrConverter.h  CodeBlock.h  Context.h  DisasmBase.h  DisasmChunk.h  DisasmChunkBuf.h  FuncNameManager.h  TargetValue.h  Tracer.h
disasm/include/dos/: DosDisasm.h  DosTracer.h
disasm/include/pe/: PeDataFetcher.h  PeDisasm.h  PeTracer.h
disasm/pe/: PeDisasm.cpp  PeTracer.cpp  PeTracer.h
disasm/udis/: ExeDisasm.h  UDisasm.cpp  UDisasm.h  UdisChunk.cpp  UdisChunk.h
vidi/: CMakeLists.txt  CodeBlocksModel.cpp  CodeBlocksModel.h  ExeDependentModel.h  FollowableOffsetedView.cpp  FollowableOffsetedView.h  GuiUtil.h  IndexHooverModel.h  InfoTableModel.cpp  InfoTableModel.h  MouseTrackingTableView.cpp  MouseTrackingTableView.h  OffsetDialog.cpp  OffsetDialog.h  OffsetedModel.h  OffsetedView.h  ReferenceSelectModel.h  application.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  offsetdialog.ui  resource.h
vidi/core/: Controller.cpp  Controller.h  ExeHandler.cpp  ExeHandler.h  ExeHandlerBase.h  ExeHandlerLoader.cpp  ExeHandlerLoader.h  Executables.cpp  Executables.h  FileLoader.cpp  FileLoader.h  LoadProgressBar.h  NavigHistory.h
vidi/disasm_mv/: DisasmBaseModel.cpp  DisasmBaseModel.h  DisasmBlockModel.cpp  DisasmBlockModel.h  DisasmCmpModel.cpp  DisasmCmpModel.h  DisasmColorSet.cpp  DisasmColorSet.h  DisasmIconSet.cpp  DisasmIconSet.h  DisasmModel.cpp  DisasmModel.h  DisasmView.cpp  DisasmView.h  models.h
vidi/frames/: CodeBlocksFrame.cpp  CodeBlocksFrame.h  FilteredFrame.cpp  FilteredFrame.h  centralframe.ui  codeblocksframe.ui  filteredframe.ui
vidi/lists_mv/: CalledImportsModel.cpp  CalledImportsModel.h  FunctionsModel.cpp  FunctionsModel.h  StringsModel.cpp  StringsModel.h  TagsModel.cpp  TagsModel.h  models.h
